// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoardTable enables the submit button when all ballots are done 1`] = `
<div>
  <div
    class="board-table-container"
  >
    <h1
      class="bp3-heading"
    >
      Audit Board #1
      : Ballot Cards to Audit
    </h1>
    <p>
      The following ballots have been assigned to your audit board for this round of the audit. Once these ballots have been located and retrieved from storage, click "Start Auditing" to begin recording the votes you see marked on the paper ballots. When you are finished auditing these ballots, click "Auditing Complete - Submit Results" to submit the results.
       
      <strong>
        Note that you will not be able to make changes after results are submitted.
      </strong>
    </p>
    <div
      class="sc-bxivhb hKSReE"
    >
      <div
        class="sc-ifAKCX imHVNF"
      >
        <h5
          class="bp3-heading"
        >
          Ballot Audit Status
        </h5>
        <span
          class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Not Audited: 
            0
          </span>
        </span>
        <span
          class="bp3-tag bp3-intent-danger bp3-minimal sc-htpNat ljtTnF"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Not Found: 
            1
          </span>
        </span>
      </div>
      <div
        class="sc-EHOje jRMUiN"
      >
        <button
          class="bp3-button bp3-disabled"
          disabled=""
          href="/"
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Start Auditing
          </span>
        </button>
        <button
          class="bp3-button"
          href="/home/signoff"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Auditing Complete - Submit Results
          </span>
        </button>
      </div>
    </div>
    <table
      class="sc-bdVaJa ldGrnX"
      role="table"
    >
      <thead>
        <tr>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Tabulator"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Tabulator
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Batch"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Batch
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Ballot Position"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Ballot Position
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Status"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Status
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          role="row"
        >
          <td
            role="cell"
          >
            11
          </td>
          <td
            role="cell"
          >
            0003-04-Precinct 13 (Jonesboro Fire Department)
          </td>
          <td
            role="cell"
          >
            313
          </td>
          <td
            role="cell"
          >
            <span
              class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Audited
              </span>
            </span>
            <a
              class="bp3-button bp3-small sc-bZQynM iMDvCJ"
              href="/home/batch/batch-id-1/ballot/313"
            >
              Re-audit
            </a>
          </td>
        </tr>
        <tr
          role="row"
        >
          <td
            role="cell"
          >
            11
          </td>
          <td
            role="cell"
          >
            0003-04-Precinct 19 (Jonesboro Fire Department)
          </td>
          <td
            role="cell"
          >
            2112
          </td>
          <td
            role="cell"
          >
            <span
              class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Audited
              </span>
            </span>
            <a
              class="bp3-button bp3-small sc-bZQynM iMDvCJ"
              href="/home/batch/batch-id-1/ballot/2112"
            >
              Re-audit
            </a>
          </td>
        </tr>
        <tr
          role="row"
        >
          <td
            role="cell"
          >
            11
          </td>
          <td
            role="cell"
          >
            0003-04-Precinct 29 (Jonesboro Fire Department)
          </td>
          <td
            role="cell"
          >
            1789
          </td>
          <td
            role="cell"
          >
            <span
              class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Audited
              </span>
            </span>
            <a
              class="bp3-button bp3-small sc-bZQynM iMDvCJ"
              href="/home/batch/batch-id-1/ballot/1789"
            >
              Re-audit
            </a>
          </td>
        </tr>
        <tr
          role="row"
        >
          <td
            role="cell"
          >
            11
          </td>
          <td
            role="cell"
          >
            0003-04-Precinct 31 (Jonesboro Fire Department)
          </td>
          <td
            role="cell"
          >
            1965
          </td>
          <td
            role="cell"
          >
            <span
              class="bp3-tag bp3-intent-danger bp3-minimal sc-htpNat ljtTnF"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Not Found
              </span>
            </span>
            <a
              class="bp3-button bp3-small sc-bZQynM iMDvCJ"
              href="/home/batch/batch-id-1/ballot/1965"
            >
              Re-audit
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`BoardTable renders container and no tabulator columns 1`] = `
<div>
  <div
    class="board-table-container"
  >
    <h1
      class="bp3-heading"
    >
      Audit Board #1
      : Ballot Cards to Audit
    </h1>
    <p>
      The following ballots have been assigned to your audit board for this round of the audit. Once these ballots have been located and retrieved from storage, click "Start Auditing" to begin recording the votes you see marked on the paper ballots. When you are finished auditing these ballots, click "Auditing Complete - Submit Results" to submit the results.
       
      <strong>
        Note that you will not be able to make changes after results are submitted.
      </strong>
    </p>
    <div
      class="sc-bxivhb hKSReE"
    >
      <div
        class="sc-ifAKCX imHVNF"
      >
        <h5
          class="bp3-heading"
        >
          Ballot Audit Status
        </h5>
        <span
          class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Not Audited: 
            0
          </span>
        </span>
        <span
          class="bp3-tag bp3-intent-danger bp3-minimal sc-htpNat ljtTnF"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Not Found: 
            0
          </span>
        </span>
      </div>
      <div
        class="sc-EHOje jRMUiN"
      >
        <button
          class="bp3-button bp3-disabled"
          disabled=""
          href="/"
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Start Auditing
          </span>
        </button>
        <button
          class="bp3-button"
          href="/home/signoff"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Auditing Complete - Submit Results
          </span>
        </button>
      </div>
    </div>
    <table
      class="sc-bdVaJa ldGrnX"
      role="table"
    >
      <thead>
        <tr>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Container"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Container
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Batch"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Batch
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Ballot Position"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Ballot Position
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Status"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Status
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          role="row"
        >
          <td
            role="cell"
          >
            box
          </td>
          <td
            role="cell"
          >
            0003-04-Precinct 13 (Jonesboro Fire Department)
          </td>
          <td
            role="cell"
          >
            313
          </td>
          <td
            role="cell"
          >
            <span
              class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Audited
              </span>
            </span>
            <a
              class="bp3-button bp3-small sc-bZQynM iMDvCJ"
              href="/home/batch/batch-id-1/ballot/313"
            >
              Re-audit
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`BoardTable renders container and tabulator columns 1`] = `
<div>
  <div
    class="board-table-container"
  >
    <h1
      class="bp3-heading"
    >
      Audit Board #1
      : Ballot Cards to Audit
    </h1>
    <p>
      The following ballots have been assigned to your audit board for this round of the audit. Once these ballots have been located and retrieved from storage, click "Start Auditing" to begin recording the votes you see marked on the paper ballots. When you are finished auditing these ballots, click "Auditing Complete - Submit Results" to submit the results.
       
      <strong>
        Note that you will not be able to make changes after results are submitted.
      </strong>
    </p>
    <div
      class="sc-bxivhb hKSReE"
    >
      <div
        class="sc-ifAKCX imHVNF"
      >
        <h5
          class="bp3-heading"
        >
          Ballot Audit Status
        </h5>
        <span
          class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Not Audited: 
            0
          </span>
        </span>
        <span
          class="bp3-tag bp3-intent-danger bp3-minimal sc-htpNat ljtTnF"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Not Found: 
            0
          </span>
        </span>
      </div>
      <div
        class="sc-EHOje jRMUiN"
      >
        <button
          class="bp3-button bp3-disabled"
          disabled=""
          href="/"
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Start Auditing
          </span>
        </button>
        <button
          class="bp3-button"
          href="/home/signoff"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Auditing Complete - Submit Results
          </span>
        </button>
      </div>
    </div>
    <table
      class="sc-bdVaJa ldGrnX"
      role="table"
    >
      <thead>
        <tr>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Container"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Container
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Tabulator"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Tabulator
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Batch"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Batch
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Ballot Position"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Ballot Position
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Status"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Status
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          role="row"
        >
          <td
            role="cell"
          >
            box
          </td>
          <td
            role="cell"
          >
            11
          </td>
          <td
            role="cell"
          >
            0003-04-Precinct 13 (Jonesboro Fire Department)
          </td>
          <td
            role="cell"
          >
            313
          </td>
          <td
            role="cell"
          >
            <span
              class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Audited
              </span>
            </span>
            <a
              class="bp3-button bp3-small sc-bZQynM iMDvCJ"
              href="/home/batch/batch-id-1/ballot/313"
            >
              Re-audit
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`BoardTable renders no container and no tabulator columns 1`] = `
<div>
  <div
    class="board-table-container"
  >
    <h1
      class="bp3-heading"
    >
      Audit Board #1
      : Ballot Cards to Audit
    </h1>
    <p>
      The following ballots have been assigned to your audit board for this round of the audit. Once these ballots have been located and retrieved from storage, click "Start Auditing" to begin recording the votes you see marked on the paper ballots. When you are finished auditing these ballots, click "Auditing Complete - Submit Results" to submit the results.
       
      <strong>
        Note that you will not be able to make changes after results are submitted.
      </strong>
    </p>
    <div
      class="sc-bxivhb hKSReE"
    >
      <div
        class="sc-ifAKCX imHVNF"
      >
        <h5
          class="bp3-heading"
        >
          Ballot Audit Status
        </h5>
        <span
          class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Not Audited: 
            0
          </span>
        </span>
        <span
          class="bp3-tag bp3-intent-danger bp3-minimal sc-htpNat ljtTnF"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Not Found: 
            0
          </span>
        </span>
      </div>
      <div
        class="sc-EHOje jRMUiN"
      >
        <button
          class="bp3-button bp3-disabled"
          disabled=""
          href="/"
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Start Auditing
          </span>
        </button>
        <button
          class="bp3-button"
          href="/home/signoff"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Auditing Complete - Submit Results
          </span>
        </button>
      </div>
    </div>
    <table
      class="sc-bdVaJa ldGrnX"
      role="table"
    >
      <thead>
        <tr>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Batch"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Batch
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Ballot Position"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Ballot Position
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Status"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Status
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          role="row"
        >
          <td
            role="cell"
          >
            0003-04-Precinct 13 (Jonesboro Fire Department)
          </td>
          <td
            role="cell"
          >
            313
          </td>
          <td
            role="cell"
          >
            <span
              class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Audited
              </span>
            </span>
            <a
              class="bp3-button bp3-small sc-bZQynM iMDvCJ"
              href="/home/batch/batch-id-1/ballot/313"
            >
              Re-audit
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`BoardTable renders tabulator and no container columns 1`] = `
<div>
  <div
    class="board-table-container"
  >
    <h1
      class="bp3-heading"
    >
      Audit Board #1
      : Ballot Cards to Audit
    </h1>
    <p>
      The following ballots have been assigned to your audit board for this round of the audit. Once these ballots have been located and retrieved from storage, click "Start Auditing" to begin recording the votes you see marked on the paper ballots. When you are finished auditing these ballots, click "Auditing Complete - Submit Results" to submit the results.
       
      <strong>
        Note that you will not be able to make changes after results are submitted.
      </strong>
    </p>
    <div
      class="sc-bxivhb hKSReE"
    >
      <div
        class="sc-ifAKCX imHVNF"
      >
        <h5
          class="bp3-heading"
        >
          Ballot Audit Status
        </h5>
        <span
          class="bp3-tag bp3-intent-warning bp3-minimal sc-htpNat ljtTnF"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Not Audited: 
            0
          </span>
        </span>
        <span
          class="bp3-tag bp3-intent-danger bp3-minimal sc-htpNat ljtTnF"
        >
          <span
            class="bp3-text-overflow-ellipsis bp3-fill"
          >
            Not Found: 
            0
          </span>
        </span>
      </div>
      <div
        class="sc-EHOje jRMUiN"
      >
        <button
          class="bp3-button bp3-disabled"
          disabled=""
          href="/"
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Start Auditing
          </span>
        </button>
        <button
          class="bp3-button"
          href="/home/signoff"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Auditing Complete - Submit Results
          </span>
        </button>
      </div>
    </div>
    <table
      class="sc-bdVaJa ldGrnX"
      role="table"
    >
      <thead>
        <tr>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Tabulator"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Tabulator
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Batch"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Batch
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Ballot Position"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Ballot Position
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Status"
          >
            <div
              style="display: flex; align-items: center; padding-right: 15px;"
            >
              <span
                style="margin-right: 5px;"
              >
                Status
              </span>
              <span>
                <span
                  class="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          role="row"
        >
          <td
            role="cell"
          >
            11
          </td>
          <td
            role="cell"
          >
            0003-04-Precinct 13 (Jonesboro Fire Department)
          </td>
          <td
            role="cell"
          >
            313
          </td>
          <td
            role="cell"
          >
            <span
              class="bp3-tag bp3-intent-success bp3-minimal sc-htpNat ljtTnF"
            >
              <span
                class="bp3-text-overflow-ellipsis bp3-fill"
              >
                Audited
              </span>
            </span>
            <a
              class="bp3-button bp3-small sc-bZQynM iMDvCJ"
              href="/home/batch/batch-id-1/ballot/313"
            >
              Re-audit
            </a>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
